setting.iniからcalendarIDを取得するように変更

--- a/setting/setting.ini
+++ b/setting/setting.ini
@@ -4,4 +4,4 @@ theme = DarkAmber
 
 [CALENDAR]
 #Enter calendar ID
-sample = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
+calendarID = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
