概要、場所、説明が予定追加後クリアされるように設定

--- a/setting/setting.ini
+++ b/setting/setting.ini
@@ -2,6 +2,8 @@
 #Application theme. When watch theme preview please run "../Themes/theme_preview.py".
 theme = DarkAmber
 
+scope = 'https://www.googleapis.com/auth/calendar'
+
 [CALENDAR]
 #Enter calendar ID
 calendarID = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
