--- a/setting/setting.ini
+++ b/setting/setting.ini
@@ -2,7 +2,7 @@
 #Application theme. When watch theme preview please run "../Themes/theme_preview.py".
 theme = DarkAmber
 
-scope = 'https://www.googleapis.com/auth/calendar'
+scope = 'https://www.googleapis.com/auth/calendar.events'
 
 [CALENDAR]
 #Enter calendar ID
