--- a/setting/setting.ini
+++ b/setting/setting.ini
@@ -1,9 +1,7 @@
 [DEFAULT]
-#Application theme. When watch theme preview please run "../Themes/theme_preview.py".
-theme = DarkAmber
-
+theme = DarkGrey2
 scope = https://www.googleapis.com/auth/calendar.events
 
 [CALENDAR]
-#Enter calendar ID
-calendarID = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
+calendarid = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
+
