configparser未使用版（.EXE化可能）

--- a/settings.ini
+++ b/settings.ini
@@ -1,8 +1,8 @@
-[DEFAULT]
+[USER SETTING]
 theme = DarkGrey2
-
 scope = https://www.googleapis.com/auth/calendar.events
 
 [CALENDAR]
 calendarid = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
+
 
