--- a/settings.ini
+++ b/settings.ini
@@ -5,3 +5,6 @@ scope = https://www.googleapis.com/auth/calendar.events
 [CALENDAR]
 calendarid = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
 
+[SCHEDULE TEMPLATES]
+
+
