setting.ini開けるようにメニューを追加

--- a/settings.ini
+++ b/settings.ini
@@ -3,7 +3,9 @@ theme = DarkGrey2
 scope = https://www.googleapis.com/auth/calendar.events
 
 [CALENDAR]
+# Default sample calendar ID
 calendarid = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
 
-[SCHEDULE TEMPLATES]
+# バイト用カレンダー
+# calendarid = 4ontsu1vooqsh0sfeg8v9jiidk@group.calendar.google.com
 
