template.json編集ボタン作成

--- a/settings.ini
+++ b/settings.ini
@@ -1,8 +1,7 @@
 [USER SETTING]
-theme = DarkGrey2
+theme = DefaultNoMoreNagging
 scope = https://www.googleapis.com/auth/calendar.events
 
 [CALENDAR]
-# Default sample calendar ID
 calendarid = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
 
