カレンダーIDが変更しやすいよう変更

--- a/settings.ini
+++ b/settings.ini
@@ -3,5 +3,6 @@ theme = GrayGrayGray
 scope = https://www.googleapis.com/auth/calendar.events
 
 [CALENDAR]
+# default = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
 calendarid = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
 
