--- a/settings.ini
+++ b/settings.ini
@@ -1,8 +1,7 @@
 [USER SETTING]
-theme = GrayGrayGray
+theme = Black
 scope = https://www.googleapis.com/auth/calendar.events
 
 [CALENDAR]
-# default = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
 calendarid = ke37d1obkoa9ihbjghnc52ui54@group.calendar.google.com
 
